--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <script>
     function changeText() {
-        document.getElementById('header').innerHTML = 'HAPPY BIRTHDAY!!<br>YOU DESERVE ALL THE GOOD THINGS!';
+        document.getElementById('header').innerHTML = 'HAPPY BIRTHDAY!!<br>YOU DESERVE ALL THE GOOD THINGS THAT HAPPENED!';
         }
 </script>
 </body>
