--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
 <script>
     function changeText() {
-        document.getElementById('header').innerHTML = 'HAPPY BIRTHDAY!!<br>YOU DESERVE ALL THE GOOD THINGS THAT HAPPENED!';
+               document.getElementById('header').innerHTML = 'HAPPY BIRTHDAY!!<br>
+                   YOU DESERVE ALL THE GOOD THINGS THAT HAPPENED!<br>I may not know what happened but Im proud of you eheh';
         }
 </script>
 </body>
